# boost_server_example

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  LICENSE.md  ProjectFiles.cmake  README.md
assets/: test_data_28.01.2019.csv
client/: CMakeLists.txt  example-client.html  example-client.js  main.cpp
cmake/: testRunner.cmake
docs/: cpp-style-guide.md
scripts/: build_iwyu_submodule.sh  build_project.sh  check_with_iwyu.sh  code_coverage.sh  rebuild_clean.sh  release_project.sh
src/: main.cpp
src/algo/: CSV.cpp  CSV.hpp  CallbackManager.cpp  CallbackManager.hpp  DispatchQueue.cpp  DispatchQueue.hpp  NetworkOperation.cpp  NetworkOperation.hpp  StringUtils.cpp  StringUtils.hpp  TickManager.cpp  TickManager.hpp
src/config/: ServerConfig.cpp  ServerConfig.hpp
src/log/: Logger.cpp  Logger.hpp
src/net/: NetworkManager.cpp  NetworkManager.hpp  SessionBase.cpp  SessionBase.hpp  SessionManagerBase.cpp  SessionManagerBase.hpp
src/net/websockets/: WsListener.cpp  WsListener.hpp  WsServer.cpp  WsServer.hpp  WsSession.cpp  WsSession.hpp
src/storage/: path.cpp  path.hpp
submodules/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  server.test.cpp  testsCommon.h
